  the TT and Raw reflection datatypes in Language.Reflection.

Tool updates
------------
* Records are now shown as records in :doc, rather than as the underlying
  datatype
* iPKG files have a new option `pkgs` which takes a comma-separated list
  of package names that the idris project depends on. This reduces bloat
  in the `opts` option with multiple package declarations.

Miscellaneous updates
---------------------
* Disable the deprecation warnings for %elim and old-style tactic scripts
  with the --no-elim-deprecation-warnings and --no-tactic-deprecation-warnings
  flags.


New in 0.9.19:
--------------
* The Idris Reference manual has been fleshed out with content originally found
  on the GitHub wiki.
* The Show class has been moved into Prelude.Show and augmented with the method
  showPrec, which allows correct parenthesization of showed terms. This comes
  with the type Prec of precedences and a few helper functions.
* New REPL command :printerdepth that sets the pretty-printer to only descend to
  some particular depth when printing. The default is set to a high number to
  make it less dangerous to experiment with infinite structures. Infinite depth
  can be set by calling :printerdepth with no argument.
* Compiler output shows applications of >>= in do-notation
* fromInteger i where i is an integer constant is now shown just as i in
  compiler output
* An interactive shell, similar to the prover, for running reflected elaborator
  actions. Access it with :elab from the REPL.
* New command-line option --highlight that causes Idris to save highlighting
  information when successfully type checking. The information is in the same
  format sent by the IDE mode, and is saved in a file with the extension ".idh".
* Highlighting information is saved by the parser as well, allowing it to highlight
  keywords like "case", "of", "let", and "do"
* Use predicates instead of boolean equality proofs as preconditions
  on List functions