@@ -144,12 +144,13 @@ elabType' norm info syn doc argDocs fc opts n nfc ty' = {- let ty' = piBind (par
          let nty' = normalise ctxt [] nty
          logLvl 2 $ "Rechecked to " ++ show nty'
 
-         -- Add normalised type to internals
+         -- Add function name to internals (used for making :addclause know
+         -- the name unambiguously)
          i <- getIState
          rep <- useREPL
          when rep $ do
-           addInternalApp (fc_fname fc) (fst . fc_start $ fc) ty' -- (mergeTy ty' (delab i nty')) -- TODO: Should use span instead of line and filename?
-         addIBC (IBCLineApp (fc_fname fc) (fst . fc_start $ fc) ty') -- (mergeTy ty' (delab i nty')))
+           addInternalApp (fc_fname fc) (fst . fc_start $ fc) (PTyped (PRef fc [] n) ty') -- (mergeTy ty' (delab i nty')) -- TODO: Should use span instead of line and filename?
+         addIBC (IBCLineApp (fc_fname fc) (fst . fc_start $ fc) (PTyped (PRef fc [] n) ty')) -- (mergeTy ty' (delab i nty')))
 
          let (fam, _) = unApply (getRetTy nty')
          let corec = case fam of
