@@ -42,6 +42,8 @@ Tool updates
 * iPKG files have a new option `pkgs` which takes a comma-separated list
   of package names that the idris project depends on. This reduces bloat
   in the `opts` option with multiple package declarations.
+* Add definition command (\d in Vim, Ctrl-Alt-A in Atom, C-c C-s in Emacs) now
+  adds missing clauses if there is already a definition.
 
 Miscellaneous updates
 ---------------------
